--- a/index.html
+++ b/index.html
@@ -23,18 +23,25 @@
         scrollbar-width: none;
       }
     </style>
-  <script type="importmap">
+    <script>
+      // Shim process.env to prevent crashes in environments where it is not pre-defined
+      window.process = window.process || { env: { API_KEY: '' } };
+    </script>
+    <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
     "react/": "https://esm.sh/react@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
-</head>
+    <script type="module" src="index.tsx"></script>
+  </head>
   <body>
     <div id="root"></div>
   </body>
