--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
         -ms-overflow-style: none;
         scrollbar-width: none;
       }
+
+      /* Smooth Entrance Animation */
+      @keyframes dropdownShow {
+        from {
+          opacity: 0;
+          transform: scale(0.95) translateY(-8px);
+        }
+        to {
+          opacity: 1;
+          transform: scale(1) translateY(0);
+        }
+      }
+
+      .animate-dropdown {
+        animation: dropdownShow 0.25s cubic-bezier(0.2, 0.8, 0.2, 1) forwards;
+      }
     </style>
     <script>
       // Immediate shim for process.env
