refactor: Improve UI responsiveness and visual polish
Adjusted `max-width` for the root element to `430px` and added a subtle box-shadow to the main application container for enhanced visual depth. Lowered the scroll threshold for sticky header activation to improve responsiveness on mobile devices.

Refined the `GoalCard` and `FoodItem` components for better spacing and typography on smaller screens, ensuring a more consistent experience across various device sizes. Introduced responsive adjustments to the radial progress indicator in `GoalCard` for better scaling.

Modified the `BottomNav` component to better handle safe area insets and adjusted the cart summary bar to be more flexible in width, improving its appearance on different screen dimensions. Removed automatic profile modal opening post-login to avoid jarring user transitions.

--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
 
       #root {
         width: 100%;
-        max-width: 440px;
+        max-width: 430px; /* Standard high-end mobile width */
         min-height: 100vh;
         min-height: 100dvh;
         background-color: #0c0c0c;
         position: relative;
         overflow-x: hidden;
+        box-shadow: 0 0 50px rgba(0,0,0,0.5);
       }
 
       .no-scrollbar::-webkit-scrollbar {
